[project]
name = "phit-plot-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "|", email = "neil.molkenthin@surreycc.gov.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "plotly[express]>=6.8.0",
    "plotnine>=0.15.7",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "radian>=0.6.16",
    "rpy2>=3.6.7",
    "rpy2-arrow>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "uv>=0.11.28",
]
